--- a/Wakawaka/Resources/Strings.resx
+++ b/Wakawaka/Resources/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AtxHeaderOutOfRange" xml:space="preserve">
+    <value>An ATX header can only be a level 1 to 6 heading.</value>
+  </data>
   <data name="HeaderOutOfRange" xml:space="preserve">
     <value>A Markdown header must be a value between 1 and 6.</value>
   </data>
@@ -131,5 +134,8 @@
   </data>
   <data name="NoNamespaceDoc" xml:space="preserve">
     <value>You cannot add XML documentation to a namespace.</value>
+  </data>
+  <data name="SetextHeaderOutOfRange" xml:space="preserve">
+    <value>A Setext header can only be a level 1 or 2 heading.</value>
   </data>
 </root>
